--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.bagal</groupId>
-    <artifactId>web-mobile-framework-sep</artifactId>
+    <artifactId>web-mobile-ui-framework</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
