--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,3 +1,17 @@
-browser=chrome
-execution=local
-runMode=web
+# Execution Mode: local or remote
+execution.mode=local
+
+# Platform: web or mobile
+execution.platform=web
+
+# Remote service : browser_stack, lambda_test, selenium_grid
+remote.service=browser_stack
+
+# Browser - chrome or firefox
+web.browser=chrome
+
+# Mobile platform: android or ios
+mobile.platform=android
+
+# browser stack ulr
+lambdaTestUrl=https://localhost:4444/wd/hub
