--- a/src/test/resources/browser-stack.properties
+++ b/src/test/resources/browser-stack.properties
@@ -1,2 +1,9 @@
-username=sayaji
-key=avxf
+os=Windows
+osVersion=10
+browserVersion=latest
+userName=umajibagal
+accessKey=KN8ta
+consoleLogs=info
+seleniumVersion=4.24.0
+projectName=Demo Project
+buildName=demotest
