--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -2,7 +2,7 @@
 execution.mode=local
 
 # Platform: web or mobile
-execution.platform=web
+execution.platform=mobile
 
 # Remote service : browser_stack, lambda_test, selenium_grid
 remote.service=browser_stack
@@ -11,7 +11,7 @@ remote.service=browser_stack
 web.browser=chrome
 
 # Mobile platform: android or ios
-mobile.platform=android
+mobile.platform=ios
 
 # browser stack ulr
 lambdaTestUrl=https://localhost:4444/wd/hub
