--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -11,7 +11,4 @@ remote.service=browser_stack
 web.browser=chrome
 
 # Mobile platform: android or ios
-mobile.platform=ios
-
-# browser stack ulr
-lambdaTestUrl=https://localhost:4444/wd/hub
+mobile.platform=android
